# pps

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
front/: index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.tsx  api.ts  components.tsx  derive.ts  i18n.tsx  icons.tsx  index.css  main.tsx  onboarding.tsx  pages_app.tsx  pages_public.tsx  prefs.ts  profile.tsx  references.tsx  tracking.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  seed.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  lib.rs  models.rs  store.rs
